tests/ui/parser/issues/issue-58856-2.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/issue-58856-2.rs:6:19
   |
LL | impl Howness for () {
   |                     - closing delimiter possibly meant for this
LL |     fn how_are_you(&self -> Empty {
   |                   ^ unclosed delimiter
...
LL | }
   | ^ mismatched closing delimiter

error: aborting due to previous error

