tests/ui/parser/issues/issue-58856-2.rs
struct Empty;

trait Howness {}

impl Howness for () {
    fn how_are_you(&self -> Empty {
        Empty
    }
} //~ ERROR mismatched closing delimiter

fn main() {}
